# feo3boy

./: .gitignore  Cargo.toml  LICENSE
.github/workflows/: rust.yml
feo3boy/: Cargo.toml
feo3boy-executor-generator/: Cargo.toml
feo3boy-executor-generator/src/: direct_executor.rs  lib.rs  parsing.rs  state_executor.rs  types.rs
feo3boy-memdev-derive/: Cargo.toml
feo3boy-memdev-derive/src/: bitflags.rs  bitswrapper.rs  bytewrapper.rs  device_type.rs  lib.rs  passthrough.rs
feo3boy-microcode/: Cargo.toml
feo3boy-microcode-generator/: Cargo.toml
feo3boy-microcode-generator/src/: defs.rs  extractor.rs  generator.rs  lib.rs  parsing.rs  validation.rs
feo3boy-microcode/src/: args.rs  lib.rs
feo3boy-opcodes/: Cargo.toml
feo3boy-opcodes/src/: gbz80types.rs  lib.rs
feo3boy-opcodes/src/compiler/: args.rs  direct_executor_generation.rs  mod.rs  state_executor_generation.rs  variables.rs
feo3boy-opcodes/src/compiler/instr/: builder.rs  flow.rs  mod.rs
feo3boy-opcodes/src/compiler/instr/flow/: mod.rs  path.rs
feo3boy-opcodes/src/microcode/: args.rs  combocodes.rs  mod.rs
feo3boy-opcodes/src/opcode/: args.rs  defs.rs  mod.rs
feo3boy-player/: Cargo.toml
feo3boy-player/src/: audio.rs  executor_selector.rs  main.rs
feo3boy/benches/: opcodes.rs
feo3boy/src/: apu.rs  bits.rs  gb.rs  gbz80core.rs  input.rs  interrupts.rs  lib.rs  macros.rs  memdev.rs  ppu.rs  serial.rs  timer.rs
feo3boy/src/apu/: lfsr.rs  lfsr15.txt  lfsr15_rev.txt  lfsr7.txt  lfsr7_rev.txt  lfsr_tables.py
feo3boy/src/clock/: mod.rs  typed_cycles.rs
feo3boy/src/gbz80core/: direct_executor_v2.rs  executor.rs  executor_testing.rs  externdefs.rs  microcode.rs  microcode_executor.rs  mod.rs  opcode.rs  opcode_args.rs  oputils.rs  stepping_executor.rs
feo3boy/src/gbz80core/direct_executor/: args.rs  mod.rs  tests.rs
feo3boy/src/gbz80core/direct_executor_v2/: mod.rs  tests.rs
feo3boy/src/gbz80core/microcode/: impl.rs  mod.rs
feo3boy/src/gbz80core/microcode/combocodes/: expansions.rs  impl.rs  mod.rs
feo3boy/src/gbz80core/microcode_executor/: mod.rs  tests.rs
feo3boy/src/gbz80core/opcode/: impl.rs  microcode.rs  mod.rs
feo3boy/src/gbz80core/opcode/args/: impl.rs  microcode.rs  mod.rs
feo3boy/src/memdev/: cartridge.rs
feo3boy/tests/: .gitignore  Makefile  README.md  asmtests.rs  bios.asm  fibonacci.asm  fibonacci16.asm  squares.asm  testcart.asm  testcart.gb
src/: gbz80core.rs  main.rs  memdev.rs  rom.rs
web-debugger/: Cargo.toml  index.html
web-debugger/src/: app.scss  breakpoints.rs  bytesup.rs  derefs.rs  fonts.scss  instrs.rs  main.rs  memview.rs  regs.rs  romload.rs  serial.rs  speedctl.rs
web-debugger/src/memview/: byteslice.rs  cartridge.rs  mod.rs
