[package]
name = "feo3boy-executor-generator"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/ciaran2/feo3boy.git"
categories = ["emulators"]
keywords = ["gameboy", "retro"]

[lib]
proc-macro = true

[dependencies]
feo3boy-opcodes = { path = "../feo3boy-opcodes", version = "0.1.0" }
derive-syn-parse = "0.1"
syn = { version = "2", features = ["full"] }
proc-macro2 = "1"
proc-macro-crate = "1"
quote = "1"
