[package]
name = "feo3boy-microcode-generator"
version = "0.1.0"
edition = "2021"
description = "Procedural macro for defining microcode instructions for the `feo3boy` gameboy."
license = "MIT"
repository = "https://github.com/ciaran2/feo3boy.git"
categories = ["emulators"]
keywords = ["gameboy", "retro"]

[lib]
proc-macro = true

[dependencies]
derive-syn-parse = "0.1"
syn = { version = "2", features = ["full"] }
proc-macro2 = "1"
quote = "1"
proc-macro-crate = "1"
