[package]
name = "feo3boy-opcodes"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/ciaran2/feo3boy.git"
categories = ["emulators"]
keywords = ["gameboy", "retro"]

[dependencies]
bitflags = "2"
feo3boy-microcode-generator = { path = "../feo3boy-microcode-generator", version = "0.1.0" }
proc-macro2 = "1"
quote = "1"
