[package]
name = "feo3boy-player"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2"
env_logger = "0.9"
pixels = "0.11.0"
winit = "0.28.2"
winit_input_helper = "0.14.0"
cpal = "0.15.1"
ringbuf = "0.3.2"
feo3boy = { path = "../feo3boy" }
log = "0.4"
