[package]
name = "feo3boy-player"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
env_logger = "0.10"
pixels = "0.12"
winit = "0.28"
winit_input_helper = "0.14"
cpal = "0.15"
ringbuf = "0.3"
feo3boy = { path = "../feo3boy", version = "0.1.0" }
log = "0.4"
