[package]
name = "feo3boy"
version = "0.1.0"
authors = ["ciaran"]
edition = "2021"

[features]
test-roms = []

[dependencies]
feo3boy-opcodes = { path = "../feo3boy-opcodes" }
feo3boy-memdev-derive = { path = "../feo3boy-memdev-derive" }
bitflags = "2"
log = "0.4"
once_cell = "1"
thiserror = "1"

[dev-dependencies]
env_logger = "0.10"
criterion = "0.4"

[[bench]]
name = "opcodes"
harness = false
