[package]
name = "feo3boy"
version = "0.1.0"
authors = ["ciaran"]
edition = "2021"

[features]
test-roms = []

[dependencies]
feo3boy-opcodes = { path = "../feo3boy-opcodes", version = "0.1.0" }
feo3boy-memdev-derive = { path = "../feo3boy-memdev-derive", version = "0.1.0" }
feo3boy-executor-generator = { path = "../feo3boy-executor-generator", version = "0.1.0" }
bitflags = "2"
log = "0.4"
once_cell = "1"
thiserror = "1"

[dev-dependencies]
env_logger = "0.10"
criterion = "0.4"
rand = "0.8"
rand_pcg = "0.3"

[[bench]]
name = "opcodes"
harness = false
