[package]
name = "web-debugger"
version = "0.1.0"
edition = "2021"

[dependencies]
feo3boy = { path = "../feo3boy" }
feo3boy-opcodes = { path = "../feo3boy-opcodes" }
gloo = { version = "0.6", features = ["futures"] }
console_log = "0.2"
# Not direclty used but `now` doesn't link properly if we don't set the wasm-bindgen
# feature, and that's needed when actually using Serde or Serde-Json, and breaks the whole
# app.
instant = { version = "0.1", features = ["wasm-bindgen"] }
log = "0.4"
once_cell = "1"
owning_ref = "0.4"
regex = "1"
serde = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
yew = "0.19"

[dependencies.web-sys]
version = "0.3"
features = ["File", "FileList", "HtmlInputElement"]
